fixed errors, changed formatting for code for readability, listed newEntry objects differently for easier access and less errors, fixed error of the wrong entries returning in edit and not saving. #3

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ header {
 a {
   text-decoration: none;
   color: white;
+  padding-left: 2px;
 }
 
 a:hover {
@@ -76,11 +77,6 @@ textarea {
 
 .hidden {
   display: none;
-}
-
-.header-entries-page {
-  height: 35px;
-  background-color: #389393;
 }
 
 .entries-row {
